--- a/2. Part 2 Similarity.ipynb
+++ b/2. Part 2 Similarity.ipynb
@@ -9,9 +9,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'utils' has no attribute 'load_cico_model'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 17\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mutils\u001b[39;00m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;66;03m# Load CICO model\u001b[39;00m\n\u001b[1;32m---> 17\u001b[0m cico_model, data_loader \u001b[38;5;241m=\u001b[39m \u001b[43mutils\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload_cico_model\u001b[49m(model_type\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m1and2shot_isc\u001b[39m\u001b[38;5;124m'\u001b[39m,model_seed\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3\u001b[39m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'utils' has no attribute 'load_cico_model'"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -4864,7 +4884,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "calypso2",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -4878,7 +4898,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
